--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,15 @@
 duckdb>=0.9.0
-numpy>=1.21.0
+numpy<2.0.0
 scikit-learn>=1.0.0 
 sentence-transformers>=2.0.0
+openai>=1.0.0
+google-cloud>=0.34.0 # Installs many individual libraries
+# google-cloud-vpc-access>=1.0.0 # Should be included by google-cloud
+google-api-python-client>=2.0.0 # For potential future use with Discovery Service
+pydantic>=2.0.0
+typer[all]>=0.9.0 # CLI library (includes rich for nice output)
+pyyaml>=6.0 # For reading YAML config file
+protobuf>=3.19.0 # Add for MessageToDict conversion (optional but recommended)
+
+# Add other specific google-cloud-* libraries as needed, or rely on dynamic import
+# Example: google-cloud-compute>=1.0.0
