--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,16 @@
-duckdb>=0.9.0
-numpy<2.0.0
-scikit-learn>=1.0.0 
-sentence-transformers>=2.0.0
-openai>=1.0.0
-google-cloud>=0.34.0 # Installs many individual libraries
-# google-cloud-vpc-access>=1.0.0 # Should be included by google-cloud
-google-api-python-client>=2.0.0 # For potential future use with Discovery Service
-pydantic>=2.0.0
-typer[all]>=0.9.0 # CLI library (includes rich for nice output)
-pyyaml>=6.0 # For reading YAML config file
-protobuf>=3.19.0 # Add for MessageToDict conversion (optional but recommended)
+typer>=0.12.3
+rich>=13.7.1
+openai>=1.3.0
+google-generativeai>=0.8.0
+anthropic>=0.50.0
+mistralai>=1.7.0
 
-# Add other specific google-cloud-* libraries as needed, or rely on dynamic import
-# Example: google-cloud-compute>=1.0.0
+# GCP Libraries (adjust versions as needed)
+google-cloud-vpc-access>=1.13.1
+google-api-core>=2.11.0
+google-auth>=2.15.0
+protobuf>=5.0.0
+
+# Other potential dependencies
+pydantic>=2.0.0
+# Add other specific google-cloud-* libraries if needed (e.g., google-cloud-compute, google-cloud-storage)
