--- a/requirements.txt
+++ b/requirements.txt
@@ -14,3 +14,4 @@ protobuf>=5.0.0
 # Other potential dependencies
 pydantic>=2.0.0
 # Add other specific google-cloud-* libraries if needed (e.g., google-cloud-compute, google-cloud-storage)
+json_repair>=0.44.0
