--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ name = "saturn"
 version = "0.1.0"
 description = "A natural language interface for Google Cloud Platform APIs."
 authors = [
-    { name = "Your Name", email = "your.email@example.com" },
+    { name = "prashanth varma", email = "your.email@example.com" },
 ]
 readme = "README.md" # Optional
 requires-python = ">=3.9"
@@ -35,10 +35,15 @@ dependencies = [
 ]
 
 [project.urls] # Optional
-"Homepage" = "https://github.com/yourusername/saturn"
-"Bug Tracker" = "https://github.com/yourusername/saturn/issues"
+"Homepage" = "https://github.com/vidhra/Saturn"
+"Bug Tracker" = "https://github.com/vidhar/Saturn/issues"
 
 # --- Add Script Entry Point --- 
 [project.scripts]
 saturn = "saturn.cli:app"
 # --- End Entry Point --- 
+
+# --- Explicitly define packages to include --- 
+[tool.setuptools.packages.find]
+include = ["saturn*", "model", "internal"] # Made model and internal more specific
+exclude = ["tests*", "venv*", "embeddings_env*"] # Exclude tests, venv, etc.
