graphRAG and unit tests

--- a/requirements.txt
+++ b/requirements.txt
@@ -22,3 +22,8 @@ google-auth-httplib2
 google-auth-oauthlib
 
 jsonschema
+
+# Testing dependencies
+pytest>=7.0.0
+pytest-asyncio>=0.23.0
+pytest-mock>=3.12.0
