--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,7 @@ dependencies = [
     "typer[all]>=0.9.0",
     "json-repair>=0.19.0",
     "rich>=13.0.0",
+    "toml>=0.10.2",
     # --- For RAG Engine ---
     "llama-index>=0.11.00",  
     "llama-index-core>=0.11.00", 
@@ -42,9 +43,8 @@ dependencies = [
     "chromadb>=0.4.22", 
     # --- For DuckDB Vector Store ---
     "llama-index-vector-stores-duckdb>=0.1.5",   
-    "duckdb>=0.10.1" 
-
-
+    "duckdb>=0.10.1",
+    "pytest-asyncio>=0.23.0"
 ]
 
 [project.urls] 
@@ -61,3 +61,7 @@ saturn = "saturn.cli:app"
 where = ["."]  
 include = ["saturn*", "model*","internal*"] 
 exclude = ["tests*", "venv*", "embeddings_env*"] 
+
+[tool.pytest.ini_options]
+asyncio_mode = "strict"
+asyncio_default_fixture_loop_scope = "function" 
