embeddings gpu support

--- a/config.yaml
+++ b/config.yaml
@@ -7,7 +7,7 @@ gcp_rag_docs_path: "./internal/tools/gcloud_online_docs_markdown"
 aws_rag_docs_path: "./internal/tools/aws_cli_docs_markdown"
 rag_docs_path: "./internal/tools/gcloud_online_docs_markdown" # Backward compatibility (maps to GCP)
 
-rag_embedding_model: "text-embedding-004"
+rag_embedding_model: "local:BAAI/bge-large-en-v1.5"
 vector_store: "chroma"  # Or "duckdb"
 
 # RAG Context-Aware Parsing Configuration
