--- a/pyproject.toml
+++ b/pyproject.toml
@@ -67,9 +67,4 @@ asyncio_mode = "strict"
 asyncio_default_fixture_loop_scope = "function" 
 
 [project.optional-dependencies]
-rag-gemini = [
-    "llama-index-embeddings-google>=0.1.0",
-]
-full-gemini = [
-    "google-generativeai>=0.8.0",
-] 
+gpu-support = ["torch>=2.0.0,<3.0.0", "torchvision>=0.15.0", "torchaudio>=2.0.0"]
