few fixes and gemini support

--- a/config.yaml
+++ b/config.yaml
@@ -1,7 +1,10 @@
-openai_api_key: "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"
-gcp_project_id: "vidhra"
-google_api_key: "AIzaSyCLA8hwNOpQeE5V0mKTs2LPidXp5Vo8AMs"
 
+gcp_project_id: "vidhra"
+llm_provider: "gemini"  # or "gemini", "claude", "mistral"
+openai_model: "gpt-4.1"   # or any other OpenAI model
+gemini_model: "gemini-2.0-flash"  # or other Gemini model
+claude_model: "claude-4-opus"  # or other Claude model
+mistral_model: "mistral-m"  # or other Mistral model
 # RAG Documentation paths - separate for each cloud provider
 gcp_rag_docs_path: "./internal/tools/gcloud_online_docs_markdown"
 aws_rag_docs_path: "./internal/tools/aws_cli_docs_markdown"
