--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,7 +32,7 @@ dependencies = [
     "rich>=13.0.0",
     "toml>=0.10.2",
     # --- Core Gemini support ---
-    "google-generativeai>=0.5.2,<0.6.0",
+    "google-generativeai>=0.5.2",
     # --- For RAG Engine ---
     "llama-index>=0.11.00",  
     "llama-index-core>=0.11.00", 
