hyde rag changes

--- a/.gitignore
+++ b/.gitignore
@@ -35,6 +35,7 @@ __pycache__/
 */.pytest_cache/*
 */*/.pytest_cache/*
 */*/*/.pytest_cache/*
+examples/db/chroma_db/*
 tests/test_db/*
 
 # env file
