--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ build-backend = "setuptools.build_meta"
 [project]
 name = "saturn"
 version = "0.1.0"
-description = "A natural language interface for Google Cloud Platform APIs."
+description = "CLI AI agent for infrastructure management and orchestration"
 authors = [
     { name = "Your Name", email = "your.email@example.com" },
 ]
@@ -48,8 +48,8 @@ dependencies = [
 ]
 
 [project.urls] 
-"Homepage" = "https://github.com/vidhra/Saturn"
-"Bug Tracker" = "https://github.com/vidhar/Saturn/issues"
+"Homepage" = "https://github.com/vidhra/saturn"
+"Bug Tracker" = "https://github.com/vidhar/saturn/issues"
 
 # --- Add Script Entry Point --- 
 [project.scripts]
