--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,9 +5,9 @@ build-backend = "setuptools.build_meta"
 [project]
 name = "saturn"
 version = "0.1.0"
-description = "CLI AI agent for infrastructure management and orchestration"
+description = "AI agent for infrastructure management and orchestration"
 authors = [
-    { name = "Your Name", email = "your.email@example.com" },
+    { name = "prashanth", email = "prashanth@vidhra.com" },
 ]
 readme = "README.md" # Optional
 requires-python = ">=3.9"
