--- a/.env-template
+++ b/.env-template
@@ -1,5 +1,5 @@
 GEMINI_API_KEY="GEMINI_API_KEY"
-OPEN_AI_KEY="OPEN_AI_KEY"
+OPENAI_API_KEY="OPEN_AI_KEY"
 GOOGLE_API_KEY="GOOGLE_API_KEY"
 ANTHROPIC_API_KEY="ANTHROPIC_API_KEY"
 MISTRAL_API_KEY="MISTRAL_API_KEY"
