conv agent with feedback loop

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,7 +44,8 @@ dependencies = [
     # --- For DuckDB Vector Store ---
     "llama-index-vector-stores-duckdb>=0.1.5",   
     "duckdb>=0.10.1",
-    "pytest-asyncio>=0.23.0"
+    "pytest-asyncio>=0.23.0",
+    "textual>=0.54.0"
 ]
 
 [project.urls] 
