--- a/config.yaml
+++ b/config.yaml
@@ -1,7 +1,7 @@
 
 gcp_project_id: "vidhra"
 aws_region: "us-east-1"
-llm_provider: "openai"  # or "gemini", "claude", "mistral"
+llm_provider: "gemini"  # or "gemini", "claude", "mistral"
 openai_model: "gpt-4.1"   # or any other OpenAI model
 gemini_model: "gemini-2.0-flash"  # or other Gemini model
 claude_model: "claude-4-opus"  # or other Claude model
