saturn ascii art

--- a/config.yaml
+++ b/config.yaml
@@ -3,7 +3,7 @@ gcp_project_id: "vidhra"
 aws_region: "us-east-1"
 llm_provider: "gemini"  # or "gemini", "claude", "mistral"
 openai_model: "gpt-4.1"   # or any other OpenAI model
-gemini_model: "gemini-2.0-flash"  # or other Gemini model
+gemini_model: "gemini-2.5-pro"  # or other Gemini model
 claude_model: "claude-4-opus"  # or other Claude model
 mistral_model: "mistral-m"  # or other Mistral model
 # RAG Documentation paths - separate for each cloud provider
